// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements OperationTraitElement given bindings field of type OperationBindingsElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (OperationBindingsElement)))
`;

exports[`refractor elements OperationTraitElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements OperationTraitElement given externalDocs field of type ExternalDocumentationElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;

exports[`refractor elements OperationTraitElement given externalDocs field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements OperationTraitElement given security field contains list of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements OperationTraitElement given security field contains list of type SecuritySchemeElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecuritySchemeElement))))
`;

exports[`refractor elements OperationTraitElement given tags field contains list of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (TagsElement
      (ReferenceElement
        (MemberElement
          (StringElement)
          (StringElement))))))
`;

exports[`refractor elements OperationTraitElement given tags field contains list of type TagElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (TagsElement
      (TagElement))))
`;

exports[`refractor elements OperationTraitElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
